second fix for wrap div background color

--- a/css exercise/style.css
+++ b/css exercise/style.css
@@ -4,6 +4,7 @@
     width : 80%;
     margin: auto;
     background : yellow;
+    overflow:hidden;
 }
 .content,aside{
     height : 600px;
